[project]
name = "wechat-downloader"
version = "0.3.0"
description = "WeChat video downloader"
requires-python = ">=3.10,<3.11"
dependencies = [
    "mitmproxy==10.1.6",
    "requests==2.31.0",
    "pycryptodome==3.19.0",
    "rich==13.7.0",
    "loguru==0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "crypto", "downloaders", "models", "utils"]

[dependency-groups]
dev = []
